--- a/articles/container-registry/index.yml
+++ b/articles/container-registry/index.yml
@@ -38,13 +38,15 @@ sections:
   - title: Steg för steg-självstudier
     items:
       - type: paragraph
-        text: Lär dig hur du använder Azure Container Registry med Azure Container Instances och Azure Container Service.
+        text: Lär dig hur du använder Azure Container Registry med de här självstudierna.
       - type: list
         style: unordered
         className: spaced noBullet
         items:
+          - html: <a href="/azure/container-registry/container-registry-tutorial-prepare-registry">Geo-replikering för Container Registry</a>
           - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Container Registry med Azure Container Instances</a>
           - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-prepare-app">Container Registry med Azure Container Service</a>
+          - html: <a href="/azure/service-fabric/service-fabric-tutorial-create-container-images">Container Registry med Service Fabric</a>
   - title: Referens
     items:
       - type: list
