--- a/articles/app-service/containers/index.yml
+++ b/articles/app-service/containers/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
 documentType: LandingData
-title: Dokumentation om Web App for Containers
+title: Dokumentation om App Service på Linux
 metadata:
   document_id: 2239df92-8506-4ee4-b5b0-9ab512c487b2
   title: 'Dokumentation om Web App for Containers – självstudier, API-referens'
-  meta.description: Learn how to use Web Apps for Containers to build and host websites and web applications leveraging Docker.
+  meta.description: Learn how to use App Service on Linux to build and host websites and web applications leveraging Docker.
   services: app-service
   author: syntaxc4
   manager: carolz
@@ -21,41 +21,49 @@ sections:
         style: icon48
         items:
           - image:
-              src: 'https://docs.microsoft.com/en-us/azure/app-service/media/index/logo_net.svg'
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_net.svg'
             text: .NET Core
-            href: 'https://docs.microsoft.com/en-us/azure/app-service/containers/quickstart-dotnetcore'
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-dotnetcore'
           - image:
-              src: 'https://docs.microsoft.com/en-us/azure/app-service/media/index/logo_nodejs.svg'
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_nodejs.svg'
             text: Node.js
-            href: 'https://docs.microsoft.com/en-us/azure/app-service/containers/quickstart-nodejs'
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-nodejs'
           - image:
-              src: 'https://docs.microsoft.com/en-us/azure/app-service/media/index/logo_php.svg'
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_php.svg'
             text: PHP
-            href: 'https://docs.microsoft.com/en-us/azure/app-service/containers/quickstart-php'
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-php'
           - image:
-              src: 'https://docs.microsoft.com/en-us/azure/app-service/media/index/logo_java.svg'
+              src: 'https://docs.microsoft.com/azure/app-service/media/index/logo_java.svg'
             text: Java
-            href: 'https://docs.microsoft.com/en-us/azure/azure-toolkit-for-intellij-hello-world-web-app-linux?toc=/azure/app-service/containers/toc.json'
+            href: 'https://docs.microsoft.com/azure/azure-toolkit-for-intellij-hello-world-web-app-linux?toc=/azure/app-service/containers/toc.json'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_ruby.svg'
+            text: Ruby
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-ruby'
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_docker.svg'
+            text: Docker
+            href: 'https://docs.microsoft.com/azure/app-service/containers/quickstart-docker'
       - type: paragraph
         text: 'Lär dig hur du distribuerar kontinuerligt:'
       - type: list
         style: icon48
         items:
           - image:
-              src: 'https://docs.microsoft.com/en-us/azure/media/index/logo_vs-team-services.svg'
+              src: 'https://docs.microsoft.com/azure/media/index/logo_vs-team-services.svg'
             text: VSTS
-            href: 'https://docs.microsoft.com/en-us/vsts/build-release/apps/cd/deploy-docker-webapp??toc=/vsts/deploy-azure/toc.json&bc=/vsts/deploy-azure/breadcrumb/toc.json'
+            href: 'https://docs.microsoft.com/vsts/build-release/apps/cd/deploy-docker-webapp??toc=/vsts/deploy-azure/toc.json&bc=/vsts/deploy-azure/breadcrumb/toc.json'
   - title: Steg för steg-självstudier
     items:
       - type: paragraph
-        text: 'Lär dig att distribuera, hantera och övervaka säkra webbappar i Azure Web App for Containers'
+        text: 'Lär dig att distribuera, hantera och övervaka säkra webbappar i App Service på Linux'
       - type: list
         style: ordered
         items:
-          - html: Skapa ett program med hjälp av <a href="en-us/azure/app-service/containers/tutorial-dotnetcore-sqldb-app">.NET Core med Azure SQL DB</a> eller <a href="en-us/azure/app-service/containers/tutorial-nodejs-mongodb-app">Node.js med MongoDB</a>
-          - html: <a href="/en-us/azure/app-service/app-service-web-tutorial-custom-domain">Mappa en befintlig anpassad domän till ditt program</a>
-          - html: <a href="/en-us/azure/app-service/app-service-web-tutorial-custom-SSL">Bind ett befintligt SSL-certifikat till ditt program</a>
-          - html: <a href="/en-us/azure/app-service/app-service-web-tutorial-content-delivery-network">Lägga till ett CDN till ditt program</a>
+          - html: Skapa ett program med hjälp av <a href="azure/app-service/containers/tutorial-dotnetcore-sqldb-app">.NET Core med Azure SQL DB</a> eller <a href="azure/app-service/containers/tutorial-nodejs-mongodb-app">Node.js med MongoDB</a>
+          - html: <a href="/azure/app-service-web/app-service-web-tutorial-custom-domain">Mappa en befintlig anpassad domän till ditt program</a>
+          - html: <a href="/azure/app-service-web/app-service-web-tutorial-custom-SSL">Bind ett befintligt SSL-certifikat till ditt program</a>
+          - html: <a href="/azure/app-service-web/app-service-web-tutorial-content-delivery-network">Lägga till ett CDN till ditt program</a>
   - title: Exempel
     items:
       - type: paragraph
@@ -64,7 +72,7 @@ sections:
         style: unordered
         className: spaced noBullet
         items:
-          - html: <a href="/en-us/powershell/azureps-cmdlets-docs">Azure PowerShell</a>
+          - html: <a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a>
           - html: <a href="/cli/azure/appservice">Azure CLI</a>
   - title: Referens
     items:
@@ -73,8 +81,8 @@ sections:
         className: cardsD
         items:
           - title: Kommandorad
-            html: <p><a href="/en-us/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/appservice">Azure CLI 2.0</a></p>
+            html: <p><a href="/powershell/azureps-cmdlets-docs">Azure PowerShell</a></p><p><a href="/cli/azure/appservice">Azure CLI 2.0</a></p>
           - title: Språk
-            html: <p><a href="/en-us/dotnet/api">.NET</a></p><p><a href="/en-us/java/api/">Java</a></p>
+            html: <p><a href="/dotnet/api">.NET</a></p><p><a href="/java/api/">Java</a></p>
           - title: REST
-            html: <p><a href="/en-us/rest/api/appservice">REST API-referens</a></p>
+            html: <p><a href="/rest/api/appservice">REST API-referens</a></p>
