--- a/articles/app-service/containers/toc.yml
+++ b/articles/app-service/containers/toc.yml
@@ -1,10 +1,10 @@
-- name: Web App for Containers
+- name: App Service på Linux
   href: index.yml
 - name: Översikt
   items:
     - name: Om Web Apps
       href: ../app-service-web-overview.md
-    - name: Om Web App for Containers
+    - name: Om App Service på Linux
       href: app-service-linux-intro.md
     - name: Jämför värdalternativ
       href: ../choose-web-site-cloud-service-vm.md?toc=%2fazure%2fapp-service%2fcontainers%2ftoc.json
