--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -15,6 +15,14 @@
       href: container-registry-get-started-powershell.md
 - name: Självstudier
   items:
+    - name: Geo-replikering
+      items:
+        - name: 1 – Förbered behållarregister
+          href: container-registry-tutorial-prepare-registry.md
+        - name: 2 – Distribuera webbprogrammet
+          href: container-registry-tutorial-deploy-app.md
+        - name: 3 – Uppdatera webbprogrammet
+          href: container-registry-tutorial-deploy-update.md
     - name: Azure Container Instances
       href: ../container-instances/container-instances-tutorial-prepare-app.md
     - name: Azure Container Service
