--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -6,6 +6,8 @@
       href: overview.md
 - name: Snabbstarter
   items:
+    - name: Dirigera Blob Storage-händelser – Azure CLI
+      href: ../storage/blobs/storage-blob-event-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
     - name: Skapa anpassad händelse – Azure CLI
       href: custom-event-quickstart.md
     - name: Skapa anpassad händelse – Azure PowerShell
@@ -28,8 +30,6 @@
       href: delivery-and-retry.md
 - name: Instruktionsguider
   items:
-    - name: Dirigera Blob Storage-händelser
-      href: ../storage/blobs/storage-blob-event-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
     - name: Strömma data från Event Hubs till informationslager
       href: event-grid-event-hubs-integration.md
 - name: Referens
