--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -46,7 +46,7 @@
     - name: Azure CLI
       href: /cli/azure/aks
     - name: REST
-      href: /rest/api/container-service
+      href: /rest/api/aks
 - name: Resurser
   items:
     - name: Azure-översikt
