--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -188,8 +188,8 @@
           href: encrypt-credentials-self-hosted-integration-runtime.md
     - name: Övervaka och hantera
       items:
-        - name: Använda .NET
-          href: 'quickstart-create-data-factory-dot-net.md#monitor-pipeline-run'
+        - name: 'Använda SDK:er'
+          href: monitor-programmatically.md
         - name: Använda Azure Monitor
           href: monitor-using-azure-monitor.md
         - name: Övervaka visuellt
