--- a/articles/log-analytics/toc.yml
+++ b/articles/log-analytics/toc.yml
@@ -45,8 +45,10 @@
           href: log-analytics-log-search-faq.md
         - name: Loggsökningsportaler
           href: log-analytics-log-search-portals.md
-- name: Gör så här för att
+- name: Instruktionsguider
   items:
+    - name: Skapa Log Analytics-arbetsyta
+      href: log-analytics-quick-create-workspace.md
     - name: Samla in data
       items:
         - name: Anslutna källor
@@ -154,7 +156,7 @@
           href: ../operations-management-suite/operations-management-suite-solution-targeting.md?toc=%2fazure%2flog-analytics%2ftoc.json
         - name: Aktivitetslogganalys
           href: log-analytics-activity.md
-        - name: AD-bedömning
+        - name: AD-hälsokontroll
           href: log-analytics-ad-assessment.md
         - name: AD-replikeringsstatus
           href: log-analytics-ad-replication-status.md
@@ -197,7 +199,7 @@
           href: log-analytics-network-performance-monitor.md
         - name: Office 365
           href: ../operations-management-suite/oms-solution-office-365.md?toc=%2fazure%2flog-analytics%2ftoc.json
-        - name: SCOM-utvärdering
+        - name: SCOM-hälsokontroll
           href: log-analytics-scom-assessment.md
         - name: Säkerhetsgranskning
           href: ../operations-management-suite/oms-security-getting-started.md?toc=%2fazure%2flog-analytics%2ftoc.json
@@ -208,7 +210,7 @@
               href: log-analytics-service-fabric-azure-resource-manager.md
         - name: Tjänstkarta
           href: ../operations-management-suite/operations-management-suite-service-map.md?toc=%2fazure%2flog-analytics%2ftoc.json
-        - name: SQL-bedömning
+        - name: SQL-hälsokontroll
           href: log-analytics-sql-assessment.md
         - name: Surface Hub
           href: log-analytics-surface-hubs.md
