--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -150,8 +150,12 @@
               href: ../common/storage-samples-java.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Hantera
       items:
-        - name: PowerShell
+        - name: PowerShell för Azure-blobar
+          href: storage-how-to-use-blobs-powershell.md
+        - name: PowerShell för Azure Storage
           href: ../common/storage-powershell-guide-full.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: 'PowerShell i molnet för Kina, myndigheter och Tyskland'
+          href: ../common/storage-powershell-independent-clouds.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Azure CLI 2.0
           href: ../common/storage-azure-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
         - name: Azure CLI 1.0
