--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -66,8 +66,12 @@
           href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
     - name: Hantera
       items:
-        - name: PowerShell
+        - name: PowerShell för Azure Files
           href: storage-how-to-use-files-powershell.md
+        - name: PowerShell för Azure Storage
+          href: ../common/storage-powershell-guide-full.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
+        - name: 'PowerShell i molnet för Kina, myndigheter och Tyskland'
+          href: ../common/storage-powershell-independent-clouds.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Azure CLI 2.0
           href: ../common/storage-azure-cli.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Azure CLI 1.0
