--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -54,8 +54,12 @@
           href: ../common/storage-use-emulator.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: Hantera
       items:
-        - name: PowerShell
+        - name: PowerShell för Azure Queues
+          href: storage-powershell-how-to-use-queues.md
+        - name: PowerShell för Azure Storage
           href: ../common/storage-powershell-guide-full.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+        - name: 'PowerShell i molnet för Kina, myndigheter och Tyskland'
+          href: ../common/storage-powershell-independent-clouds.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: Azure Automation
           href: ../common/storage-manage-with-automation.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: Skydda
