--- a/articles/log-analytics/toc.yml
+++ b/articles/log-analytics/toc.yml
@@ -128,6 +128,8 @@
               href: log-analytics-view-designer-tiles.md
             - name: Referens för visualiseringsdel
               href: log-analytics-view-designer-parts.md
+            - name: Filter
+              href: log-analytics-view-designer-filters.md
         - name: Power BI
           href: log-analytics-powerbi.md
     - name: Skapa aviseringar
