--- a/articles/managed-applications/toc.yml
+++ b/articles/managed-applications/toc.yml
@@ -19,6 +19,7 @@
     - name: Azure CLI
       href: cli-samples.md
     - name: Azure PowerShell
+      href: powershell-samples.md
     - name: Hanterade programlösningar
       href: sample-projects.md
 - name: Instruktionsguider
