--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -17,6 +17,8 @@
       items:
         - name: SSMS
           href: sql-database-connect-query-ssms.md
+        - name: Azure Portal
+          href: sql-database-connect-query-portal.md
         - name: VS-kod
           href: sql-database-connect-query-vscode.md
         - name: .NET med Visual Studio
