--- a/articles/container-registry/index.yml
+++ b/articles/container-registry/index.yml
@@ -45,7 +45,7 @@ sections:
         items:
           - html: <a href="/azure/container-registry/container-registry-tutorial-prepare-registry">Container Registry med geo-replikering (förhandsversion)</a>
           - html: <a href="/azure/container-instances/container-instances-tutorial-prepare-app">Container Registry med Azure Container Instances</a>
-          - html: <a href="/azure/container-service/kubernetes/container-service-tutorial-kubernetes-prepare-app">Container Registry med Azure Container Service</a>
+          - html: <a href="/azure/aks/tutorial-kubernetes-prepare-app">Container Registry med Azure Container Service (AKS)</a>
           - html: <a href="/azure/service-fabric/service-fabric-tutorial-create-container-images">Container Registry med Service Fabric</a>
   - title: Referens
     items:
