--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -22,6 +22,8 @@
       href: storage-quickstart-blobs-java.md
     - name: Arbeta med blobar – Python
       href: storage-quickstart-blobs-python.md
+    - name: Arbeta med blobar – Node.js
+      href: storage-quickstart-blobs-nodejs.md
 - name: Självstudier
   items:
     - name: Ladda upp och bearbeta en avbildning
