--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -97,6 +97,8 @@
           href: howto-migrate-using-export-and-import.md
     - name: Konfigurera serverparametrar
       items:
+        - name: Azure Portal
+          href: howto-configure-server-parameters-using-portal.md
         - name: Azure CLI
           href: howto-configure-server-parameters-using-cli.md
     - name: Åtkomst till serverloggar
