--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -15,14 +15,12 @@
       href: container-instances-quickstart-powershell.md
 - name: Självstudier
   items:
-    - name: Skapa och distribuera en behållare
-      items:
-        - name: 1 – Skapa behållaravbildning
-          href: container-instances-tutorial-prepare-app.md
-        - name: 2 – Skapa behållarregister
-          href: container-instances-tutorial-prepare-acr.md
-        - name: 3 – Distribuera app
-          href: container-instances-tutorial-deploy-app.md
+    - name: 1 – Skapa behållaravbildning
+      href: container-instances-tutorial-prepare-app.md
+    - name: 2 – Skapa behållarregister
+      href: container-instances-tutorial-prepare-acr.md
+    - name: 3 – Distribuera program
+      href: container-instances-tutorial-deploy-app.md
 - name: Koncept
   items:
     - name: Regioner och tillgänglighet
@@ -35,11 +33,11 @@
   items:
     - name: Distribuera grupper med flera behållare
       href: container-instances-multi-container-group.md
-    - name: Hantera tillstånd med Azure-filresurser
+    - name: Spara data med Azure Files
       href: container-instances-mounting-azure-files-volume.md
     - name: Distribuera från Azure Container Registry
       href: container-instances-using-azure-container-registry.md
-    - name: Felsöka distributioner till Azure Container Instances
+    - name: Felsöka distributioner
       href: container-instances-troubleshooting.md
 - name: Referens
   items:
@@ -49,13 +47,19 @@
       href: /rest/api/container-instances
     - name: PowerShell
       href: '/powershell/module/azurerm.containerinstance#container_instances'
+    - name: Resource Manager-mall
+      href: /azure/templates/microsoft.containerinstance/containergroups
 - name: Resurser
   items:
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/'
-    - name: Mallar – Container Instances
-      href: 'https://azure.microsoft.com/resources/templates/?resourceType=Microsoft.Containerinstance'
-    - name: Priskalkylator
-      href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Regional tillgänglighet
       href: 'https://azure.microsoft.com/regions/services/'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/container-instances/'
+    - name: Översikt
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Ge produktfeedback
+      href: 'https://feedback.azure.com/forums/602224-azure-container-instances'
+    - name: Stack Overflow
+      href: 'http://stackoverflow.com/questions/tagged/azure-container-instances'
+    - name: Videoklipp
+      href: 'https://azure.microsoft.com/resources/videos/index/?services=container-instances&sort=newest'
