--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -15,6 +15,12 @@
       href: container-registry-get-started-powershell.md
 - name: Självstudier
   items:
+    - name: Azure Container Instances
+      href: ../container-instances/container-instances-tutorial-prepare-app.md
+    - name: Azure Container Service (AKS)
+      href: ../aks/tutorial-kubernetes-prepare-app.md
+    - name: Service Fabric
+      href: ../service-fabric/service-fabric-tutorial-create-container-images.md
     - name: Geo-replikering (förhandsversion)
       items:
         - name: 1 – Förbered behållarregister
@@ -23,12 +29,6 @@
           href: container-registry-tutorial-deploy-app.md
         - name: 3 – Uppdatera webbprogrammet
           href: container-registry-tutorial-deploy-update.md
-    - name: Azure Container Instances
-      href: ../container-instances/container-instances-tutorial-prepare-app.md
-    - name: Azure Container Service (AKS)
-      href: ../aks/tutorial-kubernetes-prepare-app.md
-    - name: Service Fabric
-      href: ../service-fabric/service-fabric-tutorial-create-container-images.md
 - name: Koncept
   items:
     - name: 'SKU:er för Container Registry'
@@ -57,13 +57,19 @@
       href: /rest/api/containerregistry
     - name: PowerShell
       href: /powershell/module/azurerm.containerregistry
+    - name: Resource Manager-mall
+      href: /azure/templates/microsoft.containerregistry/registries
 - name: Resurser
   items:
-    - name: Översikt
-      href: 'https://aka.ms/acr/roadmap'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/container-registry/'
     - name: Regional tillgänglighet
       href: 'https://azure.microsoft.com/regions/services/'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/container-registry/'
+    - name: Översikt
+      href: 'https://aka.ms/acr/roadmap'
+    - name: Ge produktfeedback
+      href: 'https://feedback.azure.com/forums/903958-azure-container-registry'
     - name: Stack Overflow
       href: 'http://stackoverflow.com/questions/tagged/azure-container-registry'
+    - name: Videoklipp
+      href: 'https://azure.microsoft.com/resources/videos/index/?services=container-registry&sort=newest'
