--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -67,6 +67,8 @@
       href: web-sites-traffic-manager.md
     - name: Lokal cache
       href: app-service-local-cache-overview.md
+    - name: Diagnostik
+      href: app-service-diagnostics.md
 - name: Instruktionsguider
   items:
     - name: Konfigurera app
